@@ -4,12 +4,14 @@ use Catmandu::Sane;
 use Catmandu::Util qw(:is);
 use Moo;
 use Carp;
+use Path::Tiny;
 use namespace::clean;
 
 our $VERSION = '0.03';
 
 with 'Catmandu::Exporter';
 
+has fields  => (is => 'ro');
 has handler => (is => 'rw', default => sub {'json'} , coerce => \&_coerce_handler );
 
 sub _coerce_handler {
@@ -38,9 +40,19 @@ sub _coerce_handler {
 
 sub add {
 	my ($self, $data) = @_;
-
-	$self->handler->add($data,$self->fh);
+	$self->handler->add($data,$self->fh,$self);
 }
+
+sub commit {
+    my ($self) = @_;
+
+    if ($self->fields) {
+        my $tags = $self->handler->tags // {};
+        my @tags = map { "$_\n" } sort keys %$tags;
+        path($self->fields)->spew_utf8(@tags);
+    }
+}
+
 
 1;
 
@@ -57,14 +69,17 @@ Catmandu::Exporter::Breaker - Package that exports OAI-PMH DC in a Breaker forma
     # Using the default breaker
     $ catmandu convert JSON to Breaker < data.json
 
-    # Using a OAI_DC breaker 
+    # Using a OAI_DC breaker
     $ catmandu convert OAI --url http://biblio.ugent.be/oai to Breaker --handler oai_dc
 
     # Using a MARCXML breaker
     $ catmandu convert MARC to Breaker --handler marc
 
     # Using an XML breaker
-    $ catmandu convert XML --path book to Brealer --handler xml < t/book.xml > data.breaker
+    $ catmandu convert XML --path book to Breaker --handler xml < t/book.xml > data.breaker
+
+    # Write a fields file containing all unique fields
+    $ catmandu convert XML --path book to Breaker --handler xml --fields data.fields < t/book.xml > data.breaker
 
     # Find the usage statistics of fields in the XML file above
     $ catmandu breaker data.breaker
@@ -72,8 +87,8 @@ Catmandu::Exporter::Breaker - Package that exports OAI-PMH DC in a Breaker forma
     # Convert the Breaker format by line into JSON
     $ catmandu convert Breaker < data.breaker
 
-    # Convert the Breaker format by record into JSON
-    $ catmandu convert Breaker --record 1 < data.breaker
+    # Convert the Breaker format by line into JSON using the fields file
+    $ catmandu convert Breaker --fields data.fields < data.breaker
 
 =head1 DESCRIPTION
 
@@ -90,4 +105,3 @@ into the Breaker format which can be analyzed further by command line tools.
 L<Catmandu::Importer::Breaker>
 
 =cut
-
