@@ -8,6 +8,7 @@ use namespace::clean;
 
 our $VERSION = '0.03';
 
+has tags    => (is => 'ro' , default => sub { +{} });
 has breaker => (is => 'lazy');
 
 sub _build_breaker {
@@ -22,6 +23,8 @@ sub add {
     $self->xpath_gen($data,[],sub {
         my ($tag,$value) = @_;
 
+        $self->tags->{$tag} = 1;
+        
         $io->print(
             $self->breaker->to_breaker(
                 $identifier ,
